# prueba

./: 87622_GRUPO_D.rar  CMakeLists.txt  Excepcion_archivos.cpp  Excepcion_archivos.h  LeerArchivo.cpp  LeerArchivo.h  Lista.h  Nodo.h  Peliculas.cpp  Peliculas.h  Programa.cpp  Programa.h  ejecutable  lista.h  main.cpp  menu.h  nodo.h  peliculas.cpp  peliculas.h  peliculas.txt  peliculasNoVistas  peliculasNoVistas.txt  peliculasVistas.txt  peliculasVistasprueba.txt  programa.h
